--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-self: center;
-  padding: 200px 0 0 0;
+  padding: 200px 0 100px 0;
 }
 
 .footer__container {
@@ -34,6 +34,29 @@
   z-index: 1;
 }
 
+.footer__projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Roboto Mono';
+  padding-bottom: 50px;
+  a {
+    font-size: rem(15px);
+    color: $color-white;
+    text-decoration: none;
+    padding: 15px 0;
+  }
+  p {
+    font-size: rem(20px);
+    color: $color-white;
+  }
+  &:hover {
+    .arrow-up {
+      animation: arrowUp 2s infinite;
+    }
+  }
+}
+
 // Keyframes
 
 @keyframes glitchy {
@@ -57,5 +80,17 @@
   }
   100% {
     clip-path: 0;
+  }
+}
+
+@keyframes arrowUp {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: none;
   }
 }
