--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,10 @@
+::selection {
+  background: #ffb7b7; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: #ffb7b7; /* Gecko Browsers */
+}
+
 body {
   background-color: #000;
   background-image: url('./assets/bg-tile.png');
